Revision history for {{$dist->name}}

{{$NEXT}}

0.004     2014-06-22 00:04:06Z
          - fix tests that fail with CPAN::Meta::Check 0.009

0.003     2014-06-12 20:40:33Z
          - now warning the user at build time if dynamic_config is set, as
            the prereq specification may be incomplete
          - added new "build_phase" config, for performing the check at
            release time rather than build

0.002     2014-05-03 22:57:44Z
          - bump declared prereq on CPAN::Meta::Prereqs

0.001     2014-04-26 22:39:39Z
          - Initial release.